2008-05-22  Corinna Vinschen  <corinna@vinschen.de>

	* shared.cc (open_shared): Fix comments.  Fix a condition which has
	been overlooked to revert to its old state in change from 2008-04-18.

2008-05-22  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (symlink_info::check): Define eabuf and easize outside of
	loop.  Set to NULL on first STATUS_EAS_NOT_SUPPORTED.  Align comments.
	Fix formatting.

2008-05-22  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (fhandler_disk_file::readdir): Eliminate
	compiler warning.

2008-05-23  Christopher Faylor  <me+cygwin@cgf.cx>

	* path.cc (symlink_info::check): Don't pass EaBuffer to NtCreateFile if
	it has indicated that it isn't appropriate.
	* ntdll.h (STATUS_EAS_NOT_SUPPORTED): Define.

	* winsup.h: Remove __builtin* defines.

2008-05-22  Corinna Vinschen  <corinna@vinschen.de>

	* grp.cc (internal_getgroups): Fix thinko.  Only add enabled groups to
	the group list.

2008-05-22  Corinna Vinschen  <corinna@vinschen.de>

	* grp.cc (internal_getgroups): Don't add deny-only groups to the group
	list.

2008-05-22  Corinna Vinschen  <corinna@vinschen.de>

	* cygtls.h (struct san): Add two int values to store the current
	tls_pathbuf counters.
	(return_from_fault): Restore tls_pathbuf counters.
	(setup_fault): Save tls_pathbuf counters.
	* tlsoffset.h: Regenerate.

2008-05-22  Corinna Vinschen  <corinna@vinschen.de>

	* sec_acl.cc (setacl): Set errno to EINVAL if user or group don't exist.

2008-05-22  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (cygwin_conv_path): Define tp before setting up faul handler.
	* syscalls.cc: Ditto, throughout.
	(gen_full_path_at): Add bool parameter to allow NULL pathname.
	(futimesat): Allow NULL pathname as GLIBC.

2008-05-21  Christopher Faylor  <me+cygwin@cgf.cx>

	* string.h (strchr): Eliminate.

	* syscalls.cc (rename): Work around inexplicable C++ warning.

2008-05-21  Corinna Vinschen  <corinna@vinschen.de>
